# universal-changesets

./: Justfile  README.md  go.mod  go.sum  main.go
cmd/add/: add.go
cmd/get_version/: get_version.go
cmd/version/: version.go
pkg/: wasm.go
pkg/changeset/: changeset.go  changeset_test.go
pkg/config/: config.go
pkg/plugin/: README.md  codegen.pb.go  codegen.proto  codegen_grpc.pb.go  plugin.pb.go  plugin.proto  plugin_grpc.pb.go
pkg/version/: version.go  version_test.go
plugins/pyproject_toml/: Cargo.toml  Justfile
plugins/pyproject_toml/src/: main.rs  main.rs.old
