[package]
name = "pyproject_toml"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
prost = "0.12.6"
wasm-bindgen = "0.2.84"

[build-dependencies]
prost-build = "0.9.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
lto = true
